<resources>
    <string name="ASSIGNREPORT">ICS 204</string>
    <string name="CATANREQUEST">Catan Request</string>
    <string name="DAMAGESURVEY">Damage Survey</string>
    <string name="EODREPORT">EOD Report</string>
    <string name="EODREPORTS">EOD Report</string>
    <string name="FIELDREPORT">Field Report</string>
    <string name="GARREPORT">GAR Report</string>
    <string name="GENERALMESSAGE">General Message</string>
    <string name="REPORTS">REPORTS</string>
    <string name="RESOURCEREQUEST">Resource Request</string>
    <string name="TurnOffUserFilter">Turn Off User Filter</string>
    <string name="UXOREPORT">Explosive Report</string>
    <string name="WEATHERREPORT">Weather Report</string>
    <string name="action_about">About</string>
    <string name="action_help">NICS Help</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_alerts">Show Alerts</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="action_switch_orgs">Switch Organizations</string>
    <string name="add">Add</string>
    <string name="add_eod_report">Add EOD Report</string>
    <string name="add_general_message">Add General Message</string>
    <string name="add_item">Add Item</string>
    <string name="add_markup_fireline_button">Add Markup Fireline Button</string>
    <string name="add_markup_text_button">Add Markup Text Button</string>
    <string name="add_uxo">Add UXO</string>
    <string name="address_place">Address / Place</string>
    <string name="address_placemark">Address / Placemark</string>
    <string name="aid">Aid</string>
    <string name="all">All</string>
    <string name="and">and</string>
    <string name="app_name">NICS</string>
    <string name="appliedFilterToAll">Applied date filter between all message dates.</string>
    <string name="april">April</string>
    <string name="assign_assignment_section_displayname">Assignment</string>
    <string name="assign_branch_director_agency_displayname">Branch Director Agency</string>
    <string name="assign_branch_director_contact_displayname">Branch Director Contact#</string>
    <string name="assign_branch_director_name_displayname">Branch Director Name</string>
    <string name="assign_branch_displayname">Operation Period</string>
    <string name="assign_comms_assignment1_displayname">Assignment 1</string>
    <string name="assign_comms_assignment2_displayname">Assignment 2</string>
    <string name="assign_comms_assignment3_displayname">Assignment 3</string>
    <string name="assign_comms_assignment4_displayname">Assignment 4</string>
    <string name="assign_comms_assignment5_displayname">Assignment 5</string>
    <string name="assign_comms_assignment6_displayname">Assignment 6</string>
    <string name="assign_comms_channel1_displayname">Channel Name 1</string>
    <string name="assign_comms_channel2_displayname">Channel Name 2</string>
    <string name="assign_comms_channel3_displayname">Channel Name 3</string>
    <string name="assign_comms_channel4_displayname">Channel Name 4</string>
    <string name="assign_comms_channel5_displayname">Channel Name 5</string>
    <string name="assign_comms_channel6_displayname">Channel Name 6</string>
    <string name="assign_comms_freq1_displayname">Frequency(Tx) 1</string>
    <string name="assign_comms_freq2_displayname">Frequency(Tx) 2</string>
    <string name="assign_comms_freq3_displayname">Frequency(Tx) 3</string>
    <string name="assign_comms_freq4_displayname">Frequency(Tx) 4</string>
    <string name="assign_comms_freq5_displayname">Frequency(Tx) 5</string>
    <string name="assign_comms_freq6_displayname">Frequency(Tx) 6</string>
    <string name="assign_comms_phone1_displayname">Phone 1</string>
    <string name="assign_comms_phone2_displayname">Phone 2</string>
    <string name="assign_comms_phone3_displayname">Phone 3</string>
    <string name="assign_comms_phone4_displayname">Phone 4</string>
    <string name="assign_comms_phone5_displayname">Phone 5</string>
    <string name="assign_comms_phone6_displayname">Phone 6</string>
    <string name="assign_communications_section_displayname">Communications (Radio and/or phone numbers)</string>
    <string name="assign_contactinfo1_displayname">Contact Info 1</string>
    <string name="assign_contactinfo2_displayname">Contact Info 2</string>
    <string name="assign_contactinfo3_displayname">Contact Info 3</string>
    <string name="assign_contactinfo4_displayname">Contact Info 4</string>
    <string name="assign_coordinate_displayname">Coordinate</string>
    <string name="assign_dep_chief_agency_displayname">Deputy Operations Section Chief Agency</string>
    <string name="assign_dep_chief_contact_displayname">Deputy Operations Section Chief Contact#</string>
    <string name="assign_dep_chief_name_displayname">Deputy Operations Section Chief Name</string>
    <string name="assign_div_group_staging_displayname">Division/Group/Staging</string>
    <string name="assign_emergency_comms_evac_displayname">Evacuation</string>
    <string name="assign_emergency_comms_medical_displayname">Medical</string>
    <string name="assign_emergency_comms_other_displayname">Other</string>
    <string name="assign_emergency_communications_section_displayname">Emergency Communications</string>
    <string name="assign_end_date_displayname">Operation Period To</string>
    <string name="assign_incident_info_section_displayname">Incident Info</string>
    <string name="assign_incident_name_displayname">Incident Name</string>
    <string name="assign_leader1_displayname">Leader 1</string>
    <string name="assign_leader2_displayname">Leader 2</string>
    <string name="assign_leader3_displayname">Leader 3</string>
    <string name="assign_leader4_displayname">Leader 4</string>
    <string name="assign_notes1_displayname">Reporting Info/Notes/Remarks 1</string>
    <string name="assign_notes2_displayname">Reporting Info/Notes/Remarks 2</string>
    <string name="assign_notes3_displayname">Reporting Info/Notes/Remarks 3</string>
    <string name="assign_notes4_displayname">Reporting Info/Notes/Remarks 4</string>
    <string name="assign_num_persons1_displayname"># of Persons 1</string>
    <string name="assign_num_persons2_displayname"># of Persons 2</string>
    <string name="assign_num_persons3_displayname"># of Persons 3</string>
    <string name="assign_num_persons4_displayname"># of Persons 4</string>
    <string name="assign_operations_personnel_section_displayname">Operations Personnel</string>
    <string name="assign_ops_chief_agency_displayname">Operations Section Chief Agency</string>
    <string name="assign_ops_chief_contact_displayname">Operations Section Chief Contact#</string>
    <string name="assign_ops_chief_name_displayname">Operations Section Chief Name</string>
    <string name="assign_osc_review_by_displayname">Reviewed By (OSC)</string>
    <string name="assign_osc_review_date_displayname">Date (OSC)</string>
    <string name="assign_osc_review_time_displayname">Time (OSC)</string>
    <string name="assign_prep_date_displayname">Date</string>
    <string name="assign_prep_time_displayname">Time</string>
    <string name="assign_psc_review_by_displayname">Reviewed By (PSC)</string>
    <string name="assign_psc_review_date_displayname">Date (PSC)</string>
    <string name="assign_psc_review_time_displayname">Time (PSC)</string>
    <string name="assign_report_by_displayname">Prepared By</string>
    <string name="assign_report_type_displayname">Report Type</string>
    <string name="assign_resource_id1_displayname">Identifier 1</string>
    <string name="assign_resource_id2_displayname">Identifier 2</string>
    <string name="assign_resource_id3_displayname">Identifier 3</string>
    <string name="assign_resource_id4_displayname">Identifier 4</string>
    <string name="assign_special_instructions_displayname">Special Instructions</string>
    <string name="assign_stam_contact_displayname">Division/Group Supervisor/STAM Contact#</string>
    <string name="assign_stam_name_displayname">Division/Group Supervisor/STAM Name</string>
    <string name="assign_stame_agency_displayname">Division/Group Supervisor/STAM Agency</string>
    <string name="assign_start_time_displayname">Operation Period From</string>
    <string name="assign_strike_team_task_force_section_displayname">Strike Team/Task Force/Resource</string>
    <string name="assign_verify_section_displayname">Verification</string>
    <string name="assign_work_assignment_displayname">Work Assignment</string>
    <string name="assigned_to">Assigned To: %s</string>
    <string name="august">August</string>
    <string name="automatically_login">Automatically Login</string>
    <string name="between">between</string>
    <string name="bluetooth_not_enabled">Laser Range Finder is not enabled. Please enable it in the settings menu.</string>
    <string name="broadcast_alert">Broadcast Alert</string>
    <string name="browse_gallery">Browse Gallery</string>
    <string name="data_layer_title">Layers</string>
    <string name="example">Example:</string>
    <string name="geocode_location">Geocode Location</string>
    <string name="language_code">en</string>
    <string name="map_style">Map Style</string>
    <string name="markup_map_options">Map Options</string>
    <string name="metric">Metric</string>
    <string name="pref_description_coordinate_display_format">Select how you would like lat/long coordinates to be displayed.</string>
    <string name="pref_description_language_select">NOTE: Changing the language will log you out and restart NICS</string>
    <string name="pref_description_mdt_sync_rate">NOTE: Faster GPS updates will consume a significant amount of battery power!</string>
    <string name="pref_description_sync_over_wifi_only">Data will only be exchanged when connected to wifi</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_sync">Sync</string>
    <string name="pref_title_clear_local_chat_data">Clear Local Chat Data</string>
    <string name="pref_title_clear_local_map_data">Clear Local Map Data</string>
    <string name="pref_title_clear_local_reports_data">Clear Local Reports Data</string>
    <string name="pref_title_collabroom_sync_frequency">Map/Chat Update Frequency</string>
    <string name="pref_title_coordinate_display_format">Coordinate Display Format</string>
    <string name="pref_title_disable_notifications">Disable Push Notifications</string>
    <string name="pref_title_geofencing">AOI Hazard Detection</string>
    <string name="pref_title_incident_sync_frequency">Reports Update Frequency</string>
    <string name="pref_title_language_select">Select Language</string>
    <string name="pref_title_mdt_sync_frequency">MDT Update Frequency</string>
    <string name="pref_title_sync_over_wifi_only">Sync Over Wifi Only</string>
    <string name="pref_title_system_of_measurement_select">System of Measurement</string>
    <string name="pref_title_tracking">GPS Mobile Device Tracking</string>
    <string name="pref_title_wfs_sync_frequency">WFS Layer Update Frequency</string>
    <string name="refresh">Refresh</string>
    <string name="tracking_layer_title">Tracking</string>
    <string name="usng_mgrs">USNG / MGRS</string>
    <string name="_17tmh7737560452" translatable="false">17TMH7737560452</string>
    <string name="incident_rooms">Incident Rooms</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="order">Order</string>
    <string name="sort_by">Sort By</string>
    <string name="date">Date</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="team">Team</string>
    <string name="canton">Canton</string>
    <string name="town">Town</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>