<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c) 2008-2021, Massachusetts Institute of Technology (MIT)
 All rights reserved.

 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:

 1. Redistributions of source code must retain the above copyright notice, this
 list of conditions and the following disclaimer.

 2. Redistributions in binary form must reproduce the above copyright notice,
 this list of conditions and the following disclaimer in the documentation
 and/or other materials provided with the distribution.

 3. Neither the name of the copyright holder nor the names of its contributors
 may be used to endorse or promote products derived from this software without
 specific prior written permission.

 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
 FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:nics="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mapOptions"
        android:orderInCategory="10"
        android:title="@string/markup_map_options"
        android:icon="@drawable/ic_map_white_24dp"
        nics:showAsAction="always" />
    <item
        android:id="@+id/mapTrackingLayersOption"
        android:orderInCategory="11"
        android:title="@string/tracking_layer_title"
        android:icon="@drawable/ic_person_pin_white_24dp"
        nics:showAsAction="always" />
    <item
        android:id="@+id/mapDataLayersOption"
        android:orderInCategory="12"
        android:title="@string/data_layer_title"
        android:icon="@drawable/ic_layers_white_24dp"
        nics:showAsAction="always" />
    <item
        android:id="@+id/incidentRoomsOption"
        android:icon="@drawable/ic_people_white_24dp"
        android:orderInCategory="13"
        android:title="@string/incident_rooms"
        nics:showAsAction="always" />
    <item
        android:id="@+id/geocodeLocationOption"
        android:icon="@drawable/ic_location_on"
        android:orderInCategory="14"
        android:title="@string/geocode_location"
        nics:showAsAction="never" />
    <item
        android:id="@+id/refreshMapOption"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="15"
        android:title="@string/refresh"
        nics:showAsAction="always" />
    <item
        android:id="@+id/mapStyleOption"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="16"
        android:title="@string/map_style"
        nics:showAsAction="never" />
    <item
        android:id="@+id/snapshot"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="17"
        android:title="Take Map Snapshot"
        nics:showAsAction="never" />
    <item
        android:id="@+id/distanceCalculator"
        android:title="Distance Calculator"
        android:orderInCategory="18" />
    <item
        android:id="@+id/showDistanceCalculator"
        android:title="Show Distance Calculator"
        android:checkable="true"
        android:orderInCategory="19"
        nics:actionViewClass="androidx.appcompat.widget.AppCompatCheckBox" />
</menu>
